--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <h1>Refresh Me:</h1>
+        <h1 id="result">Refresh Me:</h1>
     </div>
     <div class="dice1">
         <h2>Player 1</h2>
@@ -19,7 +19,6 @@
         <h2>Player 2</h2>
         <img id="d2" alt="dice" src="Images/Dice1.png">
     </div>
-    <h3 id="result"></h3>
     <script src="code.js"></script>
     <footer>
         -Made By Nayan Gupta.
